# divvygrid

./: CLAUDE.md  CMakeLists.txt  README.md  build.sh  bump.sh  divvygrid.kwinscript  install.sh  main.cpp  main.qml
kwinscript/: metadata.json
kwinscript/contents/config/: main.xml
kwinscript/contents/ui/: config.ui  main.qml
kwinscript/contents/ui/components/: Shortcuts.qml
settings/: settings_main.cpp
